--- a/index.html
+++ b/index.html
@@ -29,47 +29,47 @@
     <!-- Main section, contains the daily calendar -->
     <main class="container">
         <section class="calendar-container">
-            <p class="hour" id="nine">9 am</p>
+            <p class="hour" id="nine">9:00</p>
             <textarea class="des-9 descr"></textarea>
             <button class="btn-save save-9"><i class="fa fa-save"></i></button>
         </section>
         <section class="calendar-container">
-            <p class="hour" id="ten">10 am</p>
+            <p class="hour" id="ten">10:00</p>
             <textarea class="des-10 descr"></textarea>
             <button class="btn-save save-10"><i class="fa fa-save"></i></button>
         </section>
         <section class="calendar-container">
-            <p class="hour" id="eleven">11 am</p>
+            <p class="hour" id="eleven">11:00</p>
             <textarea class="des-11 descr"></textarea>
             <button class="btn-save save-11"><i class="fa fa-save"></i></button>
         </section>
         <section class="calendar-container">
-            <p class="hour" id="twelve">12 pm</p>
+            <p class="hour" id="twelve">12:00</p>
             <textarea class="des-12 descr"></textarea>
             <button class="btn-save save-12"><i class="fa fa-save"></i></button>
         </section class="calendar-container">
         <section class="calendar-container">
-            <p class="hour" id="thirteen">1 pm</p>
+            <p class="hour" id="thirteen">13:00</p>
             <textarea class="des-13 descr"></textarea>
             <button class="btn-save save-13"><i class="fa fa-save"></i></button>
         </section>
         <section class="calendar-container">
-            <p class="hour" id="fourteen">2 pm</p>
+            <p class="hour" id="fourteen">14:00</p>
             <textarea class="des-14 descr"></textarea>
             <button class="btn-save save-14"><i class="fa fa-save"></i></button>
         </section>
         <section class="calendar-container">
-            <p class="hour" id="fifteen">3 pm</p>
+            <p class="hour" id="fifteen">15:00</p>
             <textarea class="des-15 descr"></textarea>
             <button class="btn-save save-15"><i class="fa fa-save"></i></button>
         </section>
         <section class="calendar-container">
-            <p class="hour" id="sixteen">4 pm</p>
+            <p class="hour" id="sixteen">16:00</p>
             <textarea class="des-16 descr"></textarea>
             <button class="btn-save save-16"><i class="fa fa-save"></i></button>
         </section>
         <section class="calendar-container">
-            <p class="hour" id="seventeen">5 pm</p>
+            <p class="hour" id="seventeen">17:00</p>
             <textarea class="des-17 descr"></textarea>
             <button class="btn-save save-17"><i class="fa fa-save"></i></button>
         </section>
